src/styles/components/text.scss
h1 {
    position: absolute;
    height: 123px;  
    top: 15%;
    left: 0px;
    right: 0px;
    margin-left: 5%;
    margin-right: 5%;

    font-family: Ubuntu;
    font-style: normal;
    font-weight: bold;
    font-size: 4.5vh;
    line-height: 41px;
    text-align: center;
    letter-spacing: 0.374px;

    color: #FFFFFF;
}

@media screen and (min-height: 700px) {
    h1 {
       font-size: 36px;
    }
}

h2 {
    position: absolute;
    top: 38%;
    height: 76px;
    left: 17px;
    right: 15px;

    font-family: Ubuntu;
    font-style: normal;
    font-weight: bold;
    font-size: 20px;
    /* or 205% */
    text-align: center;
    letter-spacing: 0.374px;
    color: #FFFFFF;
}

.response > h2 {
    font-size: 18px; 
}

/* text in scan item button */
h3 {
    font-family: 'ubuntu';
    font-style: normal;
    font-weight: bold;
    font-size: 16px;
    color: white;
    text-align: center;
    margin-top: 5px;
}

.response > h3 {
    position: absolute;
    top: 50%;
    text-align: center;
    width: 100%;
}

h5 {
    font-family: Ubuntu;
    font-style: normal;
    font-weight: normal;
    font-size: 15px;
    line-height: 20px;
    left: 5%;
    right: 5%;


    display: flex;
    align-items: center;
    text-align: center;
    letter-spacing: -0.24px;

    color: #FFFFFF;
}

h6 {   
    text-align: center;
    left: 5%;
    right: 5%; 
    font-family: 'ubuntu';
    font-weight: normal;
    font-size: 15px;
    line-height: 22px;
    letter-spacing: -0.408px;

    color: #FFFFFF;
}

h1.explanation {
    position: absolute;
    top: 17.09%;
    bottom: 15.14%;

    font-family: Ubuntu;
    font-style: normal;
    font-weight: bold;
    font-size: 20px;
    line-height: 41px;
    /* or 205% */
    text-align: center;
    letter-spacing: 0.374px;

    color: #FFFFFF;
}

/* Make clickable text bold */
h6.link {
    font-weight: bold; 
}

.input > h6 {
    position: absolute;
    bottom: 25px;
} 


h1.allowed {
    top: 10px;
    color: rgb(47, 173, 92);
}

h1.warning {
    top: 10px;
    color: rgb(242, 101, 34);
    opacity: 1;
}

h1.prohibited{
    top: 10px;
    color:rgb(198, 28, 20);
}

.confirm > h1 {
    position: absolute;
    top: 5vh;  
}

/* Different text positions on more info screen */
.info > h5 {
    position: absolute;
    top: 15vh;
    font-weight: bold;
}

.info > h6 {
    position: absolute;
    top: 35vh;
}

.info > h6.link {
    position: absolute;
    top: 55vh; 
}

label {
    display: block;
    position: absolute;
    position: absolute;
    left: 50%;
    transform: translate(-50%, 0);
    bottom: 125px;
    padding-left: 15px;
    font-family: 'ubuntu';
    font-weight: normal;
    font-size: 15px;
    line-height: 22px;
    letter-spacing: -0.408px;
    color: white;
}

.terms > input {
    width: 20px;
    height: 20px;
    padding: 0px;
    left: -5px;
    vertical-align: bottom;
    position: relative;
    top: -1px;
}

ul {
    font-family: 'ubuntu';
    font-size: 15px;
    color: white;
}

.welcome > h6.link {
    position: absolute;
    bottom: 102px;
}

.terms > h1 {
    top: 30px;
    font-size: 30px;
}

.terms > ul {
    position: absolute;
    font-size: 12px;
    top: 80px;
    margin-left: 50px;
    margin-right: 30px;

}

.terms > ul > li {
    font-size: 10px;
    margin-top: 5px;
}

.instructions > h6 {
    text-align: left;
    font-size: 20px;
    font-weight: bold;
    position: relative;
    top: 20px;
    margin-left: 5%;

}

.instructions > ul {
    font-size: 17px;
    list-style-type: none;
    position: relative;
    margin-top: 30px;
    margin-left: 80px;
}

.instructions > ul > li> ul {
    font-size: 17px;
    list-style-type: none;
    position: relative;
    margin-left: 30px;
}

.instructions > ul > li {
    margin-top: 7px;
}

.instructions > ul > li > ul > li {
    margin-top: 7px;
}

.result > h6.link {
    position: absolute;
    bottom: 160px;
}

a {
    text-align: center;
    left: 5%;
    right: 5%; 
    font-family: 'ubuntu';
    font-weight: bold;
    font-size: 15px;
    line-height: 22px;
    letter-spacing: -0.408px;

    color: #FFFFFF;
}

.nopicture > h2 {
    position: absolute;
    top: 30%;
    font-size: 40px;
    z-index: 1;
    margin-left: auto;
    margin-right: auto; 
}

.result > h5 {
    position: absolute;
    top: 43%;
}

.result > h6 {
    position: absolute;
    top: 60%;
}

.info > h6 {
    top: 30%
}

.feedback > h6 {
    position: absolute;
    bottom: 4%;
    font-size: 20px;
    font-weight: bold;
}

.feedback-screen > h3 {
    position: absolute;
    top: 60%;
    width: 100%;
    text-align: center; 
    line-height: 130%;
    font-size: 20px;
}

.feedback-screen > h1 {
    font-size: 30px;
    top: 10%;
}

.feedback-screen > h2 {
    top: 25%;
    font-weight: normal;
}

